# claudeq

./: .gitignore  .gitmodules  LICENSE  PUBLISHING.md  README.md
.github/workflows/: ci.yml  release.yml
bridge/: bridge.mjs  cc  ccdeck-settings.json  claudeq  cli-admin.mjs  crypto.mjs  devsim.mjs  macros.json  mock-device.html  package-lock.json  package.json  trust.mjs
bridge/hooks/: askquestion.mjs  event.sh
docs/: HARDWARE.md  PINOUT.md  PROTOCOL.md  TAILNET.md
firmware/companion/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/companion/main/: CMakeLists.txt  app.h  app_config.h  audio.cpp  battery.cpp  font_back_32.c  font_deck_12.c  font_deck_16.c  font_mic_18.c  idf_component.yml  main.cpp  net.cpp  ota.cpp  pairing.cpp  provision.cpp  trust.cpp  ui.cpp  user_config.h
firmware/display_test/: sdkconfig
firmware/display_test/main/: CMakeLists.txt  main.cpp  user_config.h
flasher/: ota.json
packaging/homebrew/: claudeq.rb
